--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.1</version>
+		</dependency>
     </dependencies>
 
     <properties>
