add search parameters [hitsPerPage,stamp]

--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 urlBase=http://p27.arquivo.pt/opensearch?query=
 type=text/html
 hitsPerSite=1
+hitsPerPage=20
 #Number of images per  (all = -1)
-NumImgsbyUrl=1 
+NumImgsbyUrl=-1
 hostGetImage=http://arquivo.pt
 urldirectoriesImage=/noFrame/replay/
 #Properties logger
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
-logging.level.netgloo = INFO
+logging.level.pt.archive = INFO
 # Log file location (in addition to the console)
 logging.file = /opt/tomcat/logs/application-getimagesWS.log
