--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -2,6 +2,7 @@ urlBase=http://p27.arquivo.pt/opensearch?query=
 type=text/html
 hitsPerSite=1
 hitsPerPage=20
+NThreads=20
 #Number of images per  (all = -1)
 NumImgsbyUrl=-1
 hostGetImage=http://arquivo.pt
