--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 urlBase=http://p27.arquivo.pt/opensearch?query=
 type=text/html
 hitsPerSite=1
-hitsPerPage=20
-NThreads=20
+hitsPerPage=100
+NThreads=50
+#milliseconds to wait for threads terminate work
+TimeoutThreads=100000
 #Number of images per  (all = -1)
 NumImgsbyUrl=-1
 hostGetImage=http://arquivo.pt
