--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -9,8 +9,14 @@ TimeoutThreads=600
 NumImgsbyUrl=-1
 hostGetImage=http://arquivo.pt
 urldirectoriesImage=/noFrame/replay/
+#Propertis CDXServer
+urlBaseCDX=http://p27.arquivo.pt/wayback/-cdx
+outputCDX=json
+fl=url,timestamp,digest
 #Properties logger
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.pt.archive = INFO
 # Log file location (in addition to the console)
 logging.file = /opt/tomcat/logs/application-getimagesWS.log
+# blacklist file location
+blacklist.file = /home/joao/workspaceMelo/getimagesWS/initial/blacklist
