--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -10,9 +10,9 @@ NumImgsbyUrl=-1
 hostGetImage=http://arquivo.pt
 urldirectoriesImage=/noFrame/replay/
 #Propertis CDXServer
-urlBaseCDX=http://p27.arquivo.pt/wayback/-cdx
+urlBaseCDX=http://p27.arquivo.pt/wayback/-cdx?
 outputCDX=json
-fl=url,timestamp,digest
+flCDX=url,timestamp,digest
 #Properties logger
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.pt.archive = INFO
