--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -12,7 +12,7 @@ urldirectoriesImage=/noFrame/replay/
 #Propertis CDXServer
 urlBaseCDX=http://p27.arquivo.pt/wayback/-cdx?
 outputCDX=json
-flCDX=url,timestamp,digest
+flCDX=url,timestamp,digest,mime
 #Properties logger
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.pt.archive = INFO
