--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-urlBase=http://p27.arquivo.pt/opensearch?query=
+urlBase=http://preprod.arquivo.pt/opensearch?query=
 type=text/html
 hitsPerSite=2
 hitsPerPage=100
@@ -10,7 +10,7 @@ NumImgsbyUrl=-1
 hostGetImage=http://arquivo.pt
 urldirectoriesImage=/noFrame/replay/
 #Properties CDXServer
-urlBaseCDX=http://p27.arquivo.pt/wayback/-cdx?
+urlBaseCDX=http://preprod.arquivo.pt/wayback/-cdx?
 outputCDX=json
 flCDX=url,timestamp,digest,mime
 #Properties logger
