--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ stopWords.file = /home/joao/workspaceMelo/getimagesWS/stopWords
 # blacklist file location
 blacklistUrl.file = /home/joao/workspaceMelo/getimagesWS/blacklistUrl
 blacklistDomain.file = /home/joao/workspaceMelo/getimagesWS/blacklistDomain
+# flag for the web service return the actual size of the images (0 no return / 1 return)
+imgParseflag = 1
+widthThumbnail = 100
+heightThumbnail = 100
