--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ NThreads=10
 TimeoutThreads=180
 #Number of images per  (all = -1)
 NumImgsbyUrl=-1
-hostGetImage=http://arquivo.pt
+hostGetImage=http://preprod.arquivo.pt
 urldirectoriesImage=/noFrame/replay/
 #Properties CDXServer
-urlBaseCDX=http://preprod.arquivo.pt/wayback/-cdx?
+urlBaseCDX=http://arquivo.pt/wayback/-cdx?
 outputCDX=json
 flCDX=url,timestamp,digest,mime
 #Properties logger
