--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,12 @@ flCDX=url,timestamp,digest,mime
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.pt.archive = INFO
 # Log file location (in addition to the console)
-logging.file = /opt/tomcat/logs/application-getimagesWS.log
+logging.file = classpath:stopWords
 #stopWords file location
-stopWords.file = /home/joao/workspaceMelo/getimagesWS/stopWords
+stopWords.file = META-INF/maven/
 # blacklist file location
-blacklistUrl.file = /home/joao/workspaceMelo/getimagesWS/blacklistUrl
-blacklistDomain.file = /home/joao/workspaceMelo/getimagesWS/blacklistDomain
+blacklistUrl.file = classpath:backlistUrl
+blacklistDomain.file = classpath:blacklistDomain
 # flag for the web service return the actual size of the images (0 no return / 1 return)
 imgParseflag = 1
 widthThumbnail = 100
