--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,13 @@ flCDX=url,timestamp,digest,mime
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.pt.archive = INFO
 # Log file location (in addition to the console)
-logging.file = classpath:stopWords
+logging.file = /var/log/getImageWS-application.log
+project.basedir=${basedirImageWS}
 #stopWords file location
-stopWords.file = META-INF/maven/
+stopWords.file =${project.basedir}/stopWords
 # blacklist file location
-blacklistUrl.file = classpath:backlistUrl
-blacklistDomain.file = classpath:blacklistDomain
+blacklistUrl.file = ${project.basedir}/backlistUrl
+blacklistDomain.file = ${project.basedir}/blacklistDomain
 # flag for the web service return the actual size of the images (0 no return / 1 return)
 imgParseflag = 1
 widthThumbnail = 100
