--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,12 +18,13 @@ flCDX=url,timestamp,digest,mime
 logging.level.pt.archive = INFO
 # Log file location (in addition to the console)
 logging.file = /var/log/getImageWS-application.log
-project.basedir=${basedirImageWS}
+#${BASEDIRImageWS}
+project.basedir=/home/joao/workspaceMelo/getimagesWS 
 #stopWords file location
-stopWords.file =${project.basedir}/stopWords
+stopWords.file = /home/joao/workspaceMelo/getimagesWS/stopWords
 # blacklist file location
-blacklistUrl.file = ${project.basedir}/backlistUrl
-blacklistDomain.file = ${project.basedir}/blacklistDomain
+blacklistUrl.file = /home/joao/workspaceMelo/getimagesWS/blacklistUrl
+blacklistDomain.file = /home/joao/workspaceMelo/getimagesWS/blacklistDomain
 # flag for the web service return the actual size of the images (0 no return / 1 return)
 imgParseflag = 1
 widthThumbnail = 100
