--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,15 +17,19 @@ flCDX=url,timestamp,digest,mime
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.pt.archive = INFO
 # Log file location (in addition to the console)
-logging.file = /var/log/getImageWS-application.log
+logging.file = /home/wayback/searcher/apache-tomcat-8.0.30/logs/getImageWS-application.log
 #${BASEDIRImageWS}
-project.basedir=/home/joao/workspaceMelo/getimagesWS 
+project.basedir=/home/jnobre/workspaceImages/getimagesWS/ 
 #stopWords file location
-stopWords.file = /home/joao/workspaceMelo/getimagesWS/stopWords
+stopWords.file = /home/jnobre/workspaceImages/getimagesWS/stopWords
 # blacklist file location
-blacklistUrl.file = /home/joao/workspaceMelo/getimagesWS/blacklistUrl
-blacklistDomain.file = /home/joao/workspaceMelo/getimagesWS/blacklistDomain
+blacklistUrl.file = /home/jnobre/workspaceImages/getimagesWS/blacklistUrl
+blacklistDomain.file = /home/jnobre/workspaceImages/getimagesWS/blacklistDomain
 # flag for the web service return the actual size of the images (0 no return / 1 return)
 imgParseflag = 1
 widthThumbnail = 100
 heightThumbnail = 100
+#Adult filter
+adultfilter = 1
+percenAccept = 60
+
