--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,13 @@
 		  <artifactId>imgscalr-lib</artifactId>
 		  <version>4.2</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.4</version>
+		</dependency>
+				
     </dependencies>
 
     <properties>
