--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,11 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.4</version>
 		</dependency>
-				
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.8</version>
+		</dependency>		
     </dependencies>
 
     <properties>
