[SafeImage]work progress..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ widthThumbnail = 150
 heightThumbnail = 150
 #Adult filter
 adultfilter = 1
-percenAccept = 60
+safeValue = 0.60f
 #interval size images (Advanced search)
 interval.size.image = 0,200,0,200,200,300,200,400,300,768,400,1024,768,1024,1024,2048
 #host safe image API
