--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ blacklistDomain.file = /Users/joaonobre/Documents/workspaceFCCN/getImagesWS/blac
 imgParseflag = 1
 widthThumbnail = 150
 heightThumbnail = 150
-#Adult filter
-adultfilter = 1
+#Adult filter (1 turn on // 0 turn off image safe filter)
+adultfilter = 0
 safeValue = 0.60f
 #interval size images (Advanced search)
 interval.size.image = 0,200,0,200,200,300,200,400,300,768,400,1024,768,1024,1024,2048
