change size search (advanced search)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,8 @@ heightThumbnail = 200
 adultfilter = 1
 safeValue = 0.70
 #interval size images (Advanced search)
-interval.size.image = 0,200,0,200,200,300,200,400,300,768,400,1024,768,1024,1024,2048
+#interval.size.image = 0,200,0,200,200,300,200,400,300,768,400,1024,768,1024,1024,2048
+interval.size.image = 0,40000,120000,786432,2097152
 #host safe image API
 safeImage = http://p27.arquivo.pt:9080/safeimage
 
