--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
 			<artifactId>jersey-client</artifactId>
 			<version>1.8</version>
 		</dependency>	
-					
+		<dependency>
+		  <groupId>com.drewnoakes</groupId>
+		  <artifactId>metadata-extractor</artifactId>
+		  <version>2.9.1</version>
+		</dependency>
     </dependencies>
 
     <properties>
