add ranking feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-urlBase=http://arquivo.pt/opensearch?query=
+urlBase=http://preprod.arquivo.pt/opensearch?query=
 type=text/html
 hitsPerSite=1
 hitsPerPage=50
